--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <h1>Hello world</h1>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam aspernatur sapiente iusto accusamus tempora voluptate molestiae, tempore hic fugiat eius at sequi fuga aut commodi praesentium reiciendis eveniet, totam error!</p>
+
+    <button>ciao</button>
     
 </body>
 </html>
